# Ferocia

./: README.md  calculations.py  main.py  pyproject.toml
.codesandbox/: tasks.json
.devcontainer/: devcontainer.json
templates/: form.html
