[tool.poetry]
name = "ferocia"
version = "0.1.0"
description = "A term deposit calculator"
authors = ["Kenni <kenni.bawden@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
